--- a/idle-breaker-interface/package.json
+++ b/idle-breaker-interface/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@react-three/drei": "^9.116.3",
+    "@react-three/fiber": "^8.17.10",
+    "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
+    "math-random": "^2.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
+    "viem": "2.x",
+    "wagmi": "^2.12.33"
   },
   "devDependencies": {
     "@types/node": "^20",
