--- a/idle-breaker-interface/package.json
+++ b/idle-breaker-interface/package.json
@@ -23,6 +23,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "viem": "2.x",
